fixed alignment inside buttons

--- a/src/components/UserProfileWidget/MenuItem/menu-item.module.scss
+++ b/src/components/UserProfileWidget/MenuItem/menu-item.module.scss
@@ -7,7 +7,7 @@
     cursor: pointer;
     display: flex;
     height: 4.9rem;
-    justify-content: center;
+    padding-left: 1.7rem;
     width: 100%;
 
     &Top {
